--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PROEL4WContext": "Server=(localdb)\\mssqllocaldb;Database=PROEL4WContext-dfc5ea88-1f1d-436d-b694-064cbab089cb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
