--- a/PROEL4W.csproj
+++ b/PROEL4W.csproj
@@ -7,14 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Categories\" />
-    <Folder Include="Pages\Products\" />
-    <Folder Include="Pages\Profile\" />
+    <Compile Remove="Pages\Profile\**" />
+    <Content Remove="Pages\Profile\**" />
+    <EmbeddedResource Remove="Pages\Profile\**" />
+    <None Remove="Pages\Profile\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.23">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
